tests/spec/emit/snapshots/slice_map.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>, f: fn(int) -> string) -> Slice<string> {
    s.map(f)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(s []int, f func(int) string) []string {
	return lisette.SliceMap(s, f)
}
