tests/spec/emit/snapshots/slice_map_capturing_lambda_becomes_a_loop.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>, factor: int) -> Slice<int> {
    let mut seen = 0
    let doubled = s.map(|x| {
      seen += 1
      x * factor
    })
    doubled.append(seen)
  }
---
package main

func test(s []int, factor int) []int {
	seen := 0
	doubled := make([]int, len(s))
	for i, x := range s {
		seen++
		doubled[i] = x * factor
	}
	return append(doubled[:len(doubled):len(doubled)], seen)
}
