tests/spec/emit/snapshots/slice_map_lambda_becomes_a_loop.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Slice<int> {
    s.map(|x| x * 2)
  }
---
package main

func test(s []int) []int {
	result := make([]int, len(s))
	for i, x := range s {
		result[i] = x * 2
	}
	return result
}
