tests/spec/emit/snapshots/slice_map_on_a_call_receiver_reads_it_once.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn source() -> Slice<int> { [1, 2] }
  
  fn test() -> Slice<int> {
    source().map(|x| x * 2)
  }
---
package main

func source() []int {
	return []int{1, 2}
}

func test() []int {
	src := source()
	result := make([]int, len(src))
	for i, x := range src {
		result[i] = x * 2
	}
	return result
}
