tests/spec/emit/snapshots/slice_map_with_an_unused_parameter_drops_the_element.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Slice<int> {
    s.map(|_x| 7)
  }
---
package main

func test(s []int) []int {
	result := make([]int, len(s))
	for i := range s {
		result[i] = 7
	}
	return result
}
