tests/spec/emit/snapshots/slice_new.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> Slice<int> {
    Slice.new<int>()
  }
---
package main

func test() []int {
	return []int{}
}
