tests/spec/emit/snapshots/slice_new_unknown_element_explicit_type_arg.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() {
    let mut s = Slice.new<Unknown>()
    s = s.append("Lilian")
  }
---
package main

func test() {
	s := []any{}
	s = append(s, "Lilian")
}
