tests/spec/emit/snapshots/slice_new_with_void_function_element.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> Slice<fn(int)> {
    Slice.new<fn(int)>()
  }
---
package main

func test() []func(int) {
	return []func(int){}
}
